tests/golden/3-basic-and-simple-literals/invalid/common/bad-boolean-literals-2.yini
^ App
isReady     = Y          # ❌ Not a valid boolean literal (should use 'yes', not 'Y')
isStopped   = N          # ❌ Not a valid boolean literal (should use 'no', not 'N')
